<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cold Start</string>
    <string name="title_trap_detail">Trap Detail</string>

    <!-- Register Dialogs -->
    <string name="register_description">Click on \"Get API Key\" to get the string you can use as your SNMP community string. API Keys can be protected with a password ensuring that only those with the password will receive alerts sent using the API key as the SNMP community.\n\nAdding an email address allows you to request a password reset.\n\nBoth are optional.</string>
    <string name="registerPasswordEditText">Password [Optional]</string>
    <string name="registerEmailEditText">Email Address [Optional]</string>

    <!-- fragment_dialog_startup_login -->
    <string name="apiKeyEditText">ColdStart Auth Key</string>
    <string name="passwordEditText">Password (if set)</string>
    <string name="buttonLogin">Login</string>


    <!-- Fragment Welcome -->
    <string name="textWelcomeTitle">Welcome</string>
    <string name="textWelcomeParagraph">This app is designed to relay SNMP traps from your network devices to your phone immediately.\n\n
It is not designed to acknowledge or manage alerts; just to get them to you as quickly, reliably and cheaply as possible.</string>


    <!-- Edit OID Activity -->
    <string name="editOIDTitle">Edit OID Description Mapping</string>
    <string name="editOIDButton">Submit Edit</string>

    <string name="editOIDTabletFillerTitle">Help edit descriptions:</string>
    <string name="editOIDTabletFillerContent">Most of these SNMP descriptions have been automatically generated from various databases.\n\n
They could of course be wrong, if you know of any mistakes simply update the text and then tap the \"Submit Edit\" button.</string>

    <!-- Fragment API Key -->
    <string name="buttonClose">Close</string>

    <!-- fragment_host_deleted -->
    <string name="hostDeletedMessage"> has been deleted from the local database.</string>

    <!-- Fragment Trap Detail (Tablet) -->
    <string name="locationLabel">Unknown Location</string>
    <string name="contactLabel">No contact information</string>
    <string name="descriptionLabel">&#8230;</string>

    <!-- Menus -->
    <string name="menuGCMStatus">See GCM Status</string>
    <string name="menuAuthKey">See Auth Key</string>
    <string name="menuSettings">Manage Settings</string>
    <string name="menuChangeKey">Change Auth Key</string>
    <string name="menuPause">Pause alerts</string>
    <string name="menuImportSNMP">SNMP Walk for system details</string>
    <string name="menuDeleteTraps">Delete Traps for this host</string>
    <string name="menuSetFilters">Set Filters</string>

    <!-- Fragment Filters -->
    <string name="filterHostTitle">Filtered Hosts</string>
    <string name="filterHostDescription">Traps from the IP addresses added to this list will be ignored and will not alert you.</string>
    <string name="filterAddHostButton">Add Host</string>

    <!-- Main List -->
    <string name="NoAlerts">There are currently no traps to display.</string>

    <!-- Preferences -->
    <string name="prefBundleCategoryTitle">Alert Bundling</string>
    <string name="prefBundleTitle">Enable Batching</string>
    <string name="prefBundleDesc">Enables the buffering of traps on the ColdStart servers, notifications are periodically pushed to your device allowing you to download the entire batch in one go.</string>
    <string name="prefBundleDelayDialogTitle">Delay before batched notification is sent</string>
    <string name="prefBundleDelayTitle">Bundling Delay</string>
    <string name="prefBundleDelayDesc">Maximum delay before a notification that batched traps are waiting is sent to your device.</string>
    <string-array name="BackgroundServiceDelay_preference">
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
    </string-array>
    <string-array name="BackgroundServiceDelay_preference_values">
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>600</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
</resources>