<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory android:title="@string/prefBundleCategoryTitle">

        <CheckBoxPreference
	        android:key="allowBundling"
	        android:title="@string/prefBundleTitle"
	        android:summary="@string/prefBundleDesc"
	        android:defaultValue="false"
		/>
        
        <ListPreference
			android:key="bundleDelay"
			android:dependency="allowBundling"
			android:title="@string/prefBundleDelayTitle"
			android:summary="@string/prefBundleDelayDesc"
			android:entries="@array/BackgroundServiceDelay_preference"
			android:entryValues="@array/BackgroundServiceDelay_preference_values"
			android:defaultValue="30"
			android:dialogTitle="@string/prefBundleDelayDialogTitle"
		/>

    </PreferenceCategory>
</PreferenceScreen>