<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    android:paddingBottom="30dp" >

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/registerEmailEditText"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/keyPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailAddress"
        android:layout_alignRight="@+id/emailAddress"
        android:layout_below="@+id/emailAddress"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/registerPasswordEditText"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/registeringProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailAddress"
        android:layout_below="@+id/keyPassword"
        android:layout_marginTop="12dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailAddress"
        android:layout_alignTop="@+id/registeringProgressBar"
        android:text="Get API Key"
        style="@style/ButtonText"
        android:background="@drawable/light_blue_button"/>

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SaveButton"
        android:layout_centerHorizontal="true"
        android:padding="12dp"
        android:text="@string/register_description"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>